@@ -161,16 +161,18 @@ Core and Builtins
 
 Library
 -------
+- Issue #5287: Add exception handling around findCaller() call to help out
+  IronPython.
 
 - Issue #5282: Fixed mmap resize on 32bit windows and unix. When offset > 0,
   The file was resized to wrong size.
 
 - Issue #5292: Fixed mmap crash on its boundary access m[len(m)].
 
-- Issue #2279: distutils.sdist.add_defaults now add files 
+- Issue #2279: distutils.sdist.add_defaults now add files
   from the package_data and the data_files metadata.
 
-- Issue #5257: refactored all tests in distutils, so they use 
+- Issue #5257: refactored all tests in distutils, so they use
   support.TempdirManager, to avoid writing in the tests directory.
 
 - Issue #4524: distutils build_script command failed with --with-suffix=3.
